--- a/exercises/exercise-2/index.html
+++ b/exercises/exercise-2/index.html
@@ -6,6 +6,33 @@
     <div id="main">
       <h1>Change my background color</h1>
     </div>
-		<script src="./script.js"></script>
+		<script>
+	  setTimeout(() => {
+  document.body.style.backgroundColor = "blue";
+}, 5000);
+	  </script>
+<!-- The setTimeout function will change the background to blue after 5000 milliseconds and have a printed text Change my background color. Test on https://html.onlineviewer.net -->
+  </body>
+</html>
+
+
+<!DOCTYPE>
+<html lang="en_US">
+	<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  </head>
+  <body>
+    <div id="main">
+      <h1>Change my background color</h1>
+    </div>
+		<script>
+	  let colors = ["green", "blue", "purple"];
+let index = 0;
+
+setInterval(() => {
+  document.body.style.backgroundColor = colors[index];
+  index = (index + 1) % colors.length;
+}, 5000);
+	  </script>
+<!-- The setInterval function will change background color every 5000 millisecond and have a printed text Change my background color. Test on https://html.onlineviewer.net -->
   </body>
 </html>
