--- a/exercises/exercise-2/index.html
+++ b/exercises/exercise-2/index.html
@@ -1,11 +1,17 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en_US">
-	<head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  </head>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+  </head>
   <body>
     <div id="main">
       <h1>Change my background color</h1>
     </div>
-		<script src="./script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
